# grid-tariffs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-code.yaml  per-file-update.yaml  release-plz.yml  updates.yml
changed-files-artifact/results/sweden/: SE556017953201_nacka_energi.full.html
cli/: Cargo.toml
cli/src/: codegen.rs  completion.rs  helpers.rs  locator.rs  main.rs  pricing_info.rs  store.rs
codegen/: Cargo.toml
codegen/src/: main.rs
results/: EON.html  Ellevio.html  Vattenfall.html
results/sweden/: Affärsverken Elnät AB.full.html  Ale El Elnät AB.extracted.txt  BTEA.full.html  Bjärke Energi.full.html  Bodens Energi Nät AB.extracted.txt  Bodens Energi Nät AB.full.html  Borlänge Energi Elnät AB.full.html  Dala Energi Elnät AB.extracted.txt  Dala Energi Elnät AB.full.html  E.ON Syd.extracted.txt  E.ON Syd.full.html  EON.full.html  Ellevio.extracted.txt  Ellevio.full.html  Eskilstuna Energi & Miljö.full.html  Falbygdens Energi.full.html  Falu Elnät AB.full.html  Gislaved Energi.extracted.txt  Gotlands Elnät AB.full.html  Göteborg Energi.extracted.txt  Göteborg Energi.full.html  Halmstads Energi och Miljö Nät AB.extracted.txt  Härjeåns Nät AB.extracted.txt  Härjeåns Nät AB.full.html  Härryda Energi AB.extracted.txt  Härryda Energi AB.full.html  Höganäs Energi Elnät AB.extracted.txt  Höganäs Energi Elnät AB.full.html  Jukkasjärvi Sockens Belysningsförening.extracted.txt  Jukkasjärvi Sockens Belysningsförening.full.html  Jämtkraft Elnät AB.full.html  Jönköping Energi.full.html  Karlstads Energi.full.html  Kraftringen.extracted.txt  Kristinehamns Energi.extracted.txt  Kristinehamns Energi.full.html  Landskrona Energi AB.extracted.txt  Landskrona Energi AB.full.html  Lerum Nät AB.full.html  Linde Energi.full.html  (+401 more)
src/: builder.rs  costs.rs  country.rs  currency.rs  defs.rs  feed_in_revenue.rs  fees.rs  helpers.rs  language.rs  lib.rs  links.rs  money.rs  operator.rs  peaks.rs  power_tariffs.rs  price_list.rs  revenues.rs  tax_reductions.rs  taxes.rs  transfer_fee.rs
src/registry/: mod.rs  prelude.rs
src/registry/sweden/: affarsverken_elnat_ab.rs  ale_el_elnat_ab.rs  alem_energi_elnat_ab.rs  alingsas_energi_elnat_ab.rs  almnas_elnat_ab.rs  alvesta_elnat_ab.rs  arvika_elnat_ab.rs  asele_elnat_ab.rs  bengtsfors_energi_nat_ab.rs  bjare_kraft_elnat_ab.rs  bjarke_energi.rs  blasjon_nat_ab.rs  bodens_energi_nat_ab.rs  boo_energi_ek.rs  borgholm_energi_elnat_ab.rs  borlange_energi_elnat_ab.rs  brittedal.rs  brittedals_elnat_ek_for.rs  bromolla_energi_vatten_ab.rs  btea.rs  c_4_elnat_ab.rs  dala_energi_elnat_ab.rs  degerfors_elnat_ab.rs  eksjo_elnat_ab.rs  ellevio.rs  emmaboda_elnat_ab.rs  eon.rs  eskilstuna_energi_miljo.rs  falbygdens_energi.rs  falkenberg_energi_elnat_ab.rs  falu_elnat_ab.rs  filipstad_energinat_ab.rs  gavle_energi_elnat_ab.rs  gislaved_energi.rs  goteborg_energi.rs  gotene_elforening.rs  gotlands_elnat_ab.rs  grastorp_energi_ek_for.rs  habo_energi_kraft_ab.rs  hallstaviks_elverk_ek_for.rs  (+91 more)
updates/: Cargo.toml
updates/src/: codegen.rs  completion.rs  helpers.rs  locator.rs  main.rs  pricing_info.rs  registry.rs  store.rs
updates/src/registry/: mod.rs  sweden.rs
