[workspace]
members = [".", "updates"]
default-members = ["."]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
rust-version = "1.88"

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"]}
serde = { version = "1.0.219", features = ["derive"] }

[package]
name = "grid-tariffs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
chrono-tz = { version = "0.10.4", default-features = false }
serde.workspace = true
thiserror = { version = "2.0.16", default-features = false }
