[workspace]
members = [".", "cli"]
default-members = [".", "cli"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
rust-version = "1.88"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"]}
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "0.9", default-features = false, features = ["derive", "chrono04"] }

[package]
name = "grid-tariffs"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "Grid tariffs"

[dependencies]
chrono.workspace = true
chrono-tz = { version = "0.10.4", default-features = false }
indexmap = "2.11.1"
schemars = { workspace = true, optional = true }
serde.workspace = true
thiserror = { version = "2.0.16", default-features = false }

[features]
schemars = ["dep:schemars"]
