[package]
name = "updates"
version = "0.1.0"
edition = "2024"

[dependencies]
grid-tariffs = { version = "0.1.0", path = "../" }
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["env", "derive"] }
directories = "6.0.0"
itertools = "0.14.0"
reqwest = { version = "0.12.23", default-features = false, features = [
    "http2",
    "rustls-tls-webpki-roots",
] }
scraper = { version = "0.24.0", default-features = false }
similar = "2.7.0"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ego-tree = "0.10.0"
